# bomb-cdn

./: .gitignore  Cargo.toml  README.md  example.env
src/: main.rs  models.rs
static/: index.html  notfound.html  styles.css
